deploy/kubernetes/deploy-mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: mysql
    labels:
        kind: mysql
spec:
    containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
              - name: mysql-config-mount
                mountPath: /docker-entrypoint-initdb.d
    volumes:
        - name: mysql-config-mount
          configMap:
              name: mysql-config
              items:
                  - key: schema.sql
                    path: schema.sql
