deploy/kubernetes/deploy-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mysql
spec:
    selector:
        kind: mysql
    ports:
        - name: mysql-port
          protocol: TCP
          port: 3306
          targetPort: 3306
