deploy/kubernetes/deploy-reader.yaml
apiVersion: v1
kind: Pod
metadata:
    name: reader
    labels:
        kind: reader
spec:
    containers:
        - name: reader
          image: reader
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: reader
spec:
    type: NodePort
    ports:
        - port: 8080
          nodePort: 30880
    selector:
        kind: reader
