deploy/kubernetes/deploy-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis
spec:
    selector:
            name: redis-dedupe-pod
    ports:
        - name: client-port
          protocol: TCP
          port: 6379
          targetPort: 6379
        - name: cluster-port
          protocol: TCP
          port: 16379
          targetPort: 16379
