deploy/kubernetes/deploy-redis.yaml
apiVersion: v1
kind: Pod
metadata:
    name: redis
    labels: 
      name: redis
spec:
    containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
            - containerPort: 16379
        - name: redis-exporter
          image: oliver006/redis_exporter
          ports:
            - containerPort: 9121
---
apiVersion: v1
kind: Service
metadata:
    name: redis
    annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/scheme: 'http'
        prometheus.io/port: '9121'
spec:
    selector:
            name: redis
    ports:
        - name: client-port
          protocol: TCP
          port: 6379
          targetPort: 6379
        - name: cluster-port
          protocol: TCP
          port: 16379
          targetPort: 16379
        - name: redis-exporter-port
          protocol: TCP
          port: 9121
          targetPort: 9121
